# onbid-case-snapshot

./: .gitignore  CLAUDE.md  FINAL_SETUP.md  README.md  TankParserComponent.tsx  app.py  final_bookmarklet.txt  koma_bookmarklet.txt  requirements.txt  run_app.bat  start.sh  tank_harvester.user.js  tank_harvester_v2.user.js  네트워크_화이트리스트_요청.md
KomaCore/: .coverage  .env  .env.dev  .env.prod  .env.sample  .replit  E2E_COMPLETION_SUMMARY.md  Makefile  NETWORK_ERROR_RESOLUTION_REPORT.md  ONBID_PARSE_V0.2_SMOKE_TEST.md  SMOKE_TEST_REPORT.md  SMOKE_TEST_REPORT_FINAL.md  main.py  models.py  onbid_parser.py  package-lock.json  package.json  pyproject.toml  replit.md  utils.py
KomaCore/attached_assets/: Pasted--3-Mock-A-1-URL--1756352398778_1756352398778.txt  Pasted--422-URL-URL-2--1756359271072_1756359271073.txt  Pasted--Agent--1756290879405_1756290879405.txt  Pasted--Agent--1756291151519_1756291151520.txt  Pasted--Agent-4-UI-Vite-CORS--1756347682193_1756347682194.txt  Pasted--Agent-KomaCore-E2E-v0-Onbid-Parse-CORS-Front-UI-URL--1756342089199_1756342089200.txt  Pasted--Agent-KomaCore-E2E-vFinal-onbid-parse-8-flags-CORS-BidPriceFor-1756343018467_1756343018467.txt  Pasted--Agent-OnbidParse-v0-2-UI--1756348726126_1756348726126.txt  Pasted--Agent-UI-URL--1756350931402_1756350931402.txt  Pasted--CORS-HTTPS-API--1756349770098_1756349770098.txt  Pasted--STRICT--1756357610272_1756357610273.txt  Pasted-Build-a-minimal-FastAPI-backend-for-KomaCore-and-run-it-1-Setup-Add-dependencies-to-pyproj-1756287982543_1756287982543.txt
KomaCore/core/: config.py  logging_patch.py  security.py
(+105 files in other folders)
